--- a/source/_posts/博客主题优化记录.md
+++ b/source/_posts/博客主题优化记录.md
@@ -23,3 +23,12 @@ tags: 折腾博客
 2021.3.6更新插入图片功能
 
 主要参考了[这篇文章](https://zhuanlan.zhihu.com/p/265077468)，但是设置之后图片没显示，markdown格式也没办法现实的，不知道什么情况，结果是#后面的字忘记空格了，脏话。
+
+
+---
+2021.3.31 静态博客迁移
+
+这个其实做了大半个月了，因为换电脑了，所以把博客在新电脑clone一份，主要参考的[博客](https://www.dazhuanlan.com/2019/12/16/5df6db7e57d0d/)中的“多台电脑操作hexo博客”部分，和[迁移hexo到新电脑](https://www.jianshu.com/p/153490a029a5)。然后目前在用Typora编辑。
+
+
+
