--- a/source/_posts/博客主题优化记录.md
+++ b/source/_posts/博客主题优化记录.md
@@ -2,10 +2,9 @@
 title: 博客主题优化记录
 date: 2021-03-01 20:57:57
 tags: 折腾博客
+description: 说坑了结果还是更了这篇博客，主要是记录一下遇到的坑。
 ---
-说坑了结果还是更了这篇博客，主要是记录一下遇到的坑。
 
-<!--more-->
 
 遇到的问题就是LeanCloud统计博客观看量总是为0。
 
