--- a/source/_posts/暑期实习面经.md
+++ b/source/_posts/暑期实习面经.md
@@ -2,9 +2,10 @@
 title: 暑期实习面经
 date: 2022-03-22 10:52:25
 tags: 面经
+description: 最近在找暑期实习，又一次感受被找工作支配的恐惧，心情很不美丽。
 ---
 
-最近在找暑期实习，又一次感受被找工作支配的恐惧，心情很不美丽。
+
 
 个人基本信息：本科硕士都是做安全的，主要研究方向是IoT漏洞挖掘和网络安全，有几个项目经历（都是IoT漏洞挖掘），有竞赛经历，有0day。
 
